fix: hiding help menu item on mobile

--- a/projects/web/src/patterns/layout/global-layout/global-layout.scss
+++ b/projects/web/src/patterns/layout/global-layout/global-layout.scss
@@ -57,7 +57,8 @@ body,
       }
 
       &--tags,
-      &--settings {
+      &--settings,
+      &--help {
         display: none;
       }
 
@@ -95,7 +96,8 @@ body,
         }
 
         &--tags,
-        &--settings {
+        &--settings,
+        &--help {
           display: flex;
         }
       }
